crates/aura-app/tests/ui/semantic_postcondition_proof_issuer_private.rs
fn main() {
    let _ = aura_app::ui::workflows::semantic_facts::issue_channel_membership_ready_proof;
}
